[build-system]
requires = ["setuptools>=75.8.0,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-browserless-web-extract"
version = "1.0.0"
description = "Web content extraction for Hermes agent — powered by Browserless.io headless browsers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.28.1,<1",
]

[project.entry-points."hermes_agent.plugins"]
hermes-browserless-web-extract = "hermes_browserless_web_extract"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["hermes_browserless_web_extract*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
